[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "orbit-server"
version = "0.1.0"
description = "ASGI server integration layer for Orbit (Starlette-based)"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Pranav Manglik" }
]

license = { text = "MIT" }

dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.30",
    "orbit-core>=0.1.0",
    "orbit-types>=0.1.0"
]

keywords = ["orbit", "server", "asgi", "starlette"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]


# 🔥 CRITICAL (package discovery)
[tool.setuptools.packages.find]
where = ["."]
include = ["orbit_server*"]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
